Bug 130908 - Chapter Numbering can't load custom style ( gtk3 )
Summary: Chapter Numbering can't load custom style ( gtk3 )
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0 target:6.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: FastParser-regressions 130989
  Show dependency treegraph
 
Reported: 2020-02-24 17:50 UTC by Jean-Sebastien Bevilacqua
Modified: 2022-09-30 12:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot 6.1.0.0.alpha1 (16.08 KB, image/png)
2020-02-27 09:20 UTC, Jean-Sebastien Bevilacqua
Details
Screenshot 6.0.7.3 (13.32 KB, image/png)
2020-02-27 09:21 UTC, Jean-Sebastien Bevilacqua
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Sebastien Bevilacqua 2020-02-24 17:50:47 UTC
Hello,
There is a problem with the loading of style for chapter numbering in Writer.

The problem still exists on 6.4.1.2 version.

I did a first bisection:

5.4.7.2 -> OK
6.0.7.3 -> OK
6.1.0.0.alpha1 -> KO
6.1.6.3 -> KO
6.4.1.2 -> KO


How to reproduce it:

1. Open Writer and Tools > Chapter Numbering > Load/Save > Save As
2. Write "My TEST" and save
3. If you Click again on Load/Save, you see your "My Test" entry

> Restart Writer and go to the load button, your "My Test" entry is not here anymore.

Thanks,
Jean-Sébastien
Comment 1 Xisco Faulí 2020-02-25 11:02:49 UTC
I can reproduce it in

Version: 7.0.0.0.alpha0+
Build ID: e6b9bc3f2ecf0fb7fde5b02f9d750ccbe022f4c1
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2020-02-25 11:27:00 UTC
Actually this is a more recent regression, introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=83e97fef3fa4de900eda35d02168fcae01c85eed

author	Noel Grandin <noel.grandin@collabora.co.uk>	2019-11-06 12:32:45 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2019-11-06 12:35:29 +0100
commit 83e97fef3fa4de900eda35d02168fcae01c85eed (patch)
tree 0d6e7e0fddc4ee0e5a1518a67290c597cbc9c147
parent cb1183510c605a5d63fdc9fec6735ac5e8db92ce (diff)
convert ImportStoredChapterNumberingRules to XFastParser

Bisected with: bibisect-linux64-6.4

Adding Cc: to Noel Grandin
Comment 3 Jean-Sebastien Bevilacqua 2020-02-25 16:13:09 UTC
The bugs starts with version 6.1.0.0.alpha1.
You can test it with 5.4 and it will work OK (when you click on Format with the 5.4 version, the custom style appears).
Comment 4 Xisco Faulí 2020-02-26 17:05:38 UTC
(In reply to Jean-Sebastien Bevilacqua from comment #3)
> The bugs starts with version 6.1.0.0.alpha1.
> You can test it with 5.4 and it will work OK (when you click on Format with
> the 5.4 version, the custom style appears).

I tested with previous versions as well.
Would you mind attaching a screencast. If needed, I'll report the issue I bisected in a follow-up isse
Comment 5 Jean-Sebastien Bevilacqua 2020-02-27 09:20:38 UTC
Created attachment 158219 [details]
Screenshot 6.1.0.0.alpha1
Comment 6 Jean-Sebastien Bevilacqua 2020-02-27 09:21:08 UTC
Created attachment 158220 [details]
Screenshot 6.0.7.3
Comment 7 Jean-Sebastien Bevilacqua 2020-02-27 09:21:48 UTC
I added the two screenshot.
In the 6.0.7.3 version, you see the "momo" style and not in the 6.1.0.0.alpha1.
Comment 8 Jean-Sebastien Bevilacqua 2020-02-27 12:54:51 UTC
I did a bisection with the 6.1 bibisect repo and the problem comes from this commit: 0920b04bca3d58d89b026bcf999ea43d0e855715
Comment 9 Jean-Sebastien Bevilacqua 2020-02-27 12:59:48 UTC
Caolan I added you to the CC list because you are the author of the commit 0920b04bca3d58d89b026bcf999ea43d0e855715
Comment 10 Xisco Faulí 2020-02-27 13:33:42 UTC
ohh, I understand what the problem is now. 0920b04bca3d58d89b026bcf999ea43d0e855715 introduced the problem for gen only, that's why I couldn't reproduce it before 6.4 using gtk3. Later on, 83e97fef3fa4de900eda35d02168fcae01c85eed broke it for gtk3 as well
Comment 11 Noel Grandin 2020-02-27 13:34:24 UTC
fix for the parsing in gerrit at

https://gerrit.libreoffice.org/c/core/+/89633
Comment 12 Commit Notification 2020-02-27 14:17:59 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5320fccc290f338d344c5d3c75101c98057788cd

tdf#130908 Chapter Numbering can't load custom style

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2020-02-27 16:43:36 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 74e3c95b9b628a0b326790b62b4e378a12d02997
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, thanks for fixing this issue!

OTOH, this is still happening with gen, so I'll create a follow-up report!
Comment 14 Commit Notification 2020-02-27 19:52:01 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/f8ad7ad58836c16f4bd3f7bf2832fd4768b5ea58

tdf#130908 Chapter Numbering can't load custom style

It will be available in 6.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.