tdf#130908 Chapter Numbering can't load custom style

regression from
    commit 83e97fef3fa4de900eda35d02168fcae01c85eed
    convert ImportStoredChapterNumberingRules to XFastParser

and add some more debugging trace

Change-Id: I224b9c442369a4c6a7746d7ff419f069d3430513
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89633
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>