sw/source/uibase/config/StoredChapterNumbering.cxx
@@ -289,7 +289,11 @@ public:
                     name = aIter.toString();
                 else if (IsXMLToken(aIter.toString(), XML_DISPLAY_NAME))
                     displayName = aIter.toString();
+                else
+                    SAL_WARN("xmloff", "unknown value for style:family=" << aIter.toString());
             }
+            else
+                SAL_WARN("xmloff", "unknown attribute " << SvXMLImport::getPrefixAndNameFromToken(aIter.getToken()) << "=" << aIter.toString());
 
         if (nFamily != XmlStyleFamily::DATA_STYLE && !name.isEmpty() && !displayName.isEmpty())
         {
@@ -336,27 +340,40 @@ public:
         }
     }
 
+    virtual SvXMLImportContextRef CreateChildContext(
+            sal_uInt16 nPrefix,
+            const OUString& rLocalName,
+            const css::uno::Reference< css::xml::sax::XAttributeList >& xAttrList ) override
+    {
+        if (XML_NAMESPACE_TEXT == nPrefix && IsXMLToken(rLocalName, XML_OUTLINE_STYLE))
+        {
+            ++m_nCounter;
+            if (m_nCounter <= SwChapterNumRules::nMaxRules)
+            {
+                SvxXMLListStyleContext *const pContext(
+                    new SvxXMLListStyleContext(GetImport(),
+                                nPrefix, rLocalName, xAttrList, true));
+                m_Contexts.emplace_back(pContext);
+                return pContext;
+            }
+        }
+        return nullptr;
+    }
+
     virtual css::uno::Reference<XFastContextHandler> SAL_CALL createFastChildContext(
                 sal_Int32 Element,
                 const css::uno::Reference< css::xml::sax::XFastAttributeList > & xAttrList ) override
     {
         if (Element == XML_ELEMENT(TEXT, XML_OUTLINE_STYLE))
         {
-            ++m_nCounter;
-            if (m_nCounter <= SwChapterNumRules::nMaxRules)
-            {
-                SvxXMLListStyleContext *const pContext(
-                    new SvxXMLListStyleContext(GetImport(), Element, xAttrList, true));
-                m_Contexts.emplace_back(pContext);
-                return pContext;
-            }
+            // handled in CreateChildContext
         }
         else if (Element == XML_ELEMENT(STYLE, XML_STYLE))
         {
             return new StoredChapterNumberingDummyStyleContext(GetImport(), xAttrList);
         }
 
-        return SvXMLImportContext::createFastChildContext(Element, xAttrList);
+        return nullptr;
     }
 };
 
